overlapping fixing with nav

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     background-color: var(--header-color);
     display: flex;
     align-items: center;
-    z-index: 200;
+    z-index: 300;
     height: 11%;
     min-height: 60px;
   
